# magicpin-vera-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  docker-compose.yml  judge_results.txt  judge_run_output.txt  judge_simulator.py  optimize.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  run.py  submission_log.txt  test_gemini.py  test_groq.py
.claude/: settings.local.json
config/: settings.yaml  weights.yaml
scripts/: _scaffold_phase1.py  benchmark_latency.py  load_dataset.py  run_submission.py
tests/: conftest.py
tests/category/: __init__.py  test_dentist_strategy.py  test_gym_strategy.py  test_pharmacy_strategy.py  test_restaurant_strategy.py  test_salon_strategy.py
tests/integration/: test_api_context.py  test_api_healthz.py  test_api_reply.py  test_api_tick.py  test_full_conversation.py  test_full_pipeline_determinism.py
tests/judge/: __init__.py  test_case_studies.py  test_submission.py
tests/unit/: test_anti_patterns.py  test_auto_reply_detector.py  test_candidate_generator.py  test_candidate_ranker.py  test_context_models.py  test_context_repository.py  test_cta_rules.py  test_decision_trace.py  test_fallback_chain.py  test_feature_builder.py  test_feature_extractor.py  test_feature_validator.py  test_goal_inferrer.py  test_intent_classifier.py  test_language_rules.py  test_pipeline_context.py  test_pipeline_timer.py  test_resilient_store.py  test_signal_detector.py  test_startup_validator.py  test_store.py  test_suppression.py  test_template_engine.py  test_template_ranker.py  test_weighted_scorer.py
vera/: __init__.py  cli.py  config.py  main.py
vera/api/: deps.py  error_handlers.py
vera/candidates/: __init__.py  candidate.py  candidate_generator.py
vera/categories/: __init__.py  dentists.py  gyms.py  pharmacies.py  restaurants.py  salons.py
vera/contexts/: __init__.py  category.py  composed_message.py  customer.py  merchant.py  trigger.py
vera/conversation/: __init__.py  auto_reply_detector.py  customer_reply.py  grounded_replies.py  intent_classifier.py  (+3 more)
vera_bot/: .env.example  README.md  main.py  render.yaml  test_bot.py
(+119 files in other folders)
