[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vera-engine"
version = "3.0.0"
description = "Magicpin AI Challenge — Deterministic Message Composition Engine"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vera*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
markers = [
    "unit: fast, no network",
    "integration: requires running server",
    "category: category-specific strategy tests",
    "judge: judge-harness tests",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["vera"]
omit = ["vera/submission/*", "scripts/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

# ── black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["vera"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["T201"]
# FastAPI's dependency injection inspects real runtime annotations
# (Request, and Depends-provided types) — TYPE_CHECKING-only imports
# would break it, so exempt the API layer from the TCH/TC family.
"vera/api/**/*.py" = ["TC"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
